--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,153 +5,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.valdo.tictactoe.MainActivity"
+    tools:context="com.valdo.xebola.MainActivity"
     tools:showIn="@layout/activity_main">
 
 
     <GridLayout
+        android:id="@+id/gridV"
         android:layout_width="360dp"
         android:layout_height="360dp"
-        android:background="@drawable/bg2"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/bg1"
         android:columnCount="3"
-        android:rowCount="3"
-        android:id="@+id/gridV"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
-
+        android:rowCount="3">
 
         <ImageView
             android:id="@+id/img1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignTop="@+id/img1"
-            android:layout_margin="-10dp"
-            android:layout_marginEnd="37dp"
-            android:layout_marginRight="37dp"
-            android:layout_marginTop="10dp"
-            android:layout_toLeftOf="@+id/img1"
-            android:layout_toStartOf="@+id/img1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="30dp"
+            android:layout_marginTop="50dp"
             android:onClick="dropin"
-            android:tag="0"/>
+            android:tag="0" />
 
         <ImageView
-            android:id="@+id/img1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="0dp"
-            android:layout_marginBottom="92dp"
-            android:layout_marginEnd="96dp"
-            android:layout_marginLeft="-10dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="10dp"
+            android:id="@+id/img2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="50dp"
             android:onClick="dropin"
             android:tag="1" />
 
         <ImageView
-            android:id="@+id/img8"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/img9"
-            android:layout_margin="-20dp"
-            android:layout_marginBottom="25dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="10dp"
-            android:onClick="dropin"
-            android:tag="2"/>
-
-        <ImageView
-            android:id="@+id/img9"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="-75dp"
-            android:layout_toEndOf="@+id/img7"
-            android:layout_toRightOf="@+id/img7"
-            android:onClick="dropin"
-            android:tag="3"/>
-
-        <ImageView
-            android:id="@+id/img7"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignLeft="@+id/gridV"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/gridV"
-            android:layout_marginBottom="50dp"
-            android:layout_marginTop="-75dp"
-            android:onClick="dropin"
-            android:tag="4"/>
-
-        <ImageView
-            android:id="@+id/im2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_marginLeft="-25dp"
-            android:layout_marginRight="0dp"
-            android:layout_marginTop="-75dp"
-            android:onClick="dropin"
-            android:tag="5"/>
-
-        <ImageView
             android:id="@+id/img3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="0dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="-25dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="50dp"
             android:onClick="dropin"
-            android:tag="6"/>
+            android:tag="2" />
 
         <ImageView
             android:id="@+id/img4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="15dp"
-            android:layout_marginLeft="-5dp"
-            android:layout_marginTop="-25dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="-20dp"
             android:onClick="dropin"
-            android:tag="7"/>
+            android:tag="3" />
 
         <ImageView
             android:id="@+id/img5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="20dp"
-            android:layout_marginLeft="-20dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginTop="-20dp"
             android:onClick="dropin"
-            android:tag="8"/>
+            android:tag="4" />
 
+        <ImageView
+            android:id="@+id/img6"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="-20dp"
+            android:onClick="dropin"
+            android:tag="5" />
+
+        <ImageView
+            android:id="@+id/img7"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:onClick="dropin"
+            android:tag="6" />
+
+        <ImageView
+            android:id="@+id/img8"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:onClick="dropin"
+            android:tag="7" />
+
+        <ImageView
+            android:id="@+id/img9"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="10dp"
+            android:onClick="dropin"
+            android:tag="8" />
     </GridLayout>
 
     <LinearLayout
         android:id="@+id/againLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
 
-        android:layout_marginTop="400dp"
-        android:background="@android:color/holo_orange_dark"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:padding="20dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="130dp"
+        android:background="@android:color/darker_gray"
+        android:orientation="vertical"
         android:visibility="invisible">
 
         <TextView
             android:id="@+id/wonMessage"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp" />
+            android:text="TextView" />
 
         <Button
             android:id="@+id/playAgain"
@@ -160,6 +123,4 @@
             android:onClick="Denovo"
             android:text="Play again" />
     </LinearLayout>
-
 </android.widget.RelativeLayout>
-
